tests/neg/magic-offset-header-e.scala

def foo: Int = "not an int"  // error
